# gas-sensor_SWCNT_film-data-classification

./: .dockerignore  .gitignore  Dockerfile  Launch MLflow.bat  README.md  docker-compose.yml  entrypoint.sh  mlflow.db  optuna_studies.db  pyproject.toml  requirements.in  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
configs/: 17_12_best_catboost_params.yaml  17_12_best_lstm_params.yaml  config_catboost_classification.yaml  config_catboost_regression.yaml  config_lstm_classification.yaml  config_lstm_regression.yaml
data/: README.md
data/processed/: NO2_2.parquet
data/raw/: NO2_16_04_protocol10-15-25.brotli
docs/: TODO.md  methodology.md  results.md
notebooks/: Optuna_tuning.ipynb  Test_notebook.ipynb
notebooks/archive dump/: New thermocycling ML Aug 23_outputless.ipynb  New thermocycling ML LSTM excerpt.ipynb  Thermocycling - traditional graphs_v2.ipynb
scripts/: optimize_hyperparameters.py  run_optimization_from_config.py  run_preprocessing.py  test_setup.py  train_catboost.py  train_lstm.py
src/: requirements.txt
src/data/: assemble.py  cleaning.py  loading.py  paths.py
src/models/: catboost_model.py  lstm_model.py  optuna_objectives.py
src/preprocessing/: train_test.py
src/thermocycling/: cli.py  config.py
src/thermocycling/data/: loading.py
src/thermocycling/models/: catboost_model.py  lstm_model.py  optuna_objectives.py
src/thermocycling/pipeline/: assemble.py  paths.py
(+3 files in other folders)
